qt6/gen_qdatetimeedit.h

typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDateTimeEdit QDateTimeEdit;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QStyleOptionSpinBox QStyleOptionSpinBox;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTime QTime;
typedef struct QTimeEdit QTimeEdit;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
bool QDateTimeEdit_override_virtual_mousePressEvent(void* self, intptr_t slot);
bool QDateTimeEdit_override_virtual_paintEvent(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_paintEvent(void* self, QPaintEvent* event);
bool QDateTimeEdit_override_virtual_initStyleOption(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_initStyleOption(const void* self, QStyleOptionSpinBox* option);
bool QDateTimeEdit_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QDateTimeEdit_virtualbase_minimumSizeHint(const void* self);
bool QDateTimeEdit_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QDateTimeEdit_virtualbase_inputMethodQuery(const void* self, int param1);
bool QDateTimeEdit_override_virtual_resizeEvent(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_resizeEvent(void* self, QResizeEvent* event);
bool QDateTimeEdit_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
bool QDateTimeEdit_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
bool QDateTimeEdit_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* event);
bool QDateTimeEdit_override_virtual_changeEvent(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_changeEvent(void* self, QEvent* event);
bool QDateTimeEdit_override_virtual_closeEvent(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QDateTimeEdit_override_virtual_hideEvent(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QDateTimeEdit_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* event);
bool QDateTimeEdit_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_mouseMoveEvent(void* self, QMouseEvent* event);
bool QDateTimeEdit_override_virtual_timerEvent(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QDateTimeEdit_override_virtual_showEvent(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_showEvent(void* self, QShowEvent* event);
bool QDateTimeEdit_override_virtual_devType(void* self, intptr_t slot);
int QDateTimeEdit_virtualbase_devType(const void* self);
bool QDateTimeEdit_override_virtual_setVisible(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_setVisible(void* self, bool visible);
bool QDateTimeEdit_override_virtual_heightForWidth(void* self, intptr_t slot);
int QDateTimeEdit_virtualbase_heightForWidth(const void* self, int param1);
bool QDateTimeEdit_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QDateTimeEdit_virtualbase_hasHeightForWidth(const void* self);
bool QDateTimeEdit_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QDateTimeEdit_virtualbase_paintEngine(const void* self);
bool QDateTimeEdit_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);
bool QDateTimeEdit_override_virtual_enterEvent(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_enterEvent(void* self, QEnterEvent* event);
bool QDateTimeEdit_override_virtual_leaveEvent(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_leaveEvent(void* self, QEvent* event);
bool QDateTimeEdit_override_virtual_moveEvent(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QDateTimeEdit_override_virtual_tabletEvent(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QDateTimeEdit_override_virtual_actionEvent(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QDateTimeEdit_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);
bool QDateTimeEdit_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* event);
bool QDateTimeEdit_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* event);
bool QDateTimeEdit_override_virtual_dropEvent(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_dropEvent(void* self, QDropEvent* event);
bool QDateTimeEdit_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QDateTimeEdit_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, intptr_t* result);
bool QDateTimeEdit_override_virtual_metric(void* self, intptr_t slot);
int QDateTimeEdit_virtualbase_metric(const void* self, int param1);
bool QDateTimeEdit_override_virtual_initPainter(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_initPainter(const void* self, QPainter* painter);
bool QDateTimeEdit_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QDateTimeEdit_virtualbase_redirected(const void* self, QPoint* offset);
bool QDateTimeEdit_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QDateTimeEdit_virtualbase_sharedPainter(const void* self);
bool QDateTimeEdit_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* param1);
bool QDateTimeEdit_override_virtual_eventFilter(void* self, intptr_t slot);
bool QDateTimeEdit_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QDateTimeEdit_override_virtual_childEvent(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_childEvent(void* self, QChildEvent* event);
bool QDateTimeEdit_override_virtual_customEvent(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_customEvent(void* self, QEvent* event);
bool QDateTimeEdit_override_virtual_connectNotify(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QDateTimeEdit_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QDateTimeEdit_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QDateTimeEdit_staticMetaObject();
void QDateTimeEdit_delete(QDateTimeEdit* self);
QTimeEdit* QTimeEdit_new(QWidget* parent);
QTimeEdit* QTimeEdit_new2();
QTimeEdit* QTimeEdit_new3(QTime* time);
QTimeEdit* QTimeEdit_new4(QTime* time, QWidget* parent);
QMetaObject* QTimeEdit_metaObject(const QTimeEdit* self);