qt6/gen_qdatetimeedit.nim

proc fcQDateTimeEdit_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_mousePressEvent".}
proc fQDateTimeEdit_virtualbase_paintEvent(self: pointer, event: pointer): void{.importc: "QDateTimeEdit_virtualbase_paintEvent".}
proc fcQDateTimeEdit_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_paintEvent".}
proc fQDateTimeEdit_virtualbase_initStyleOption(self: pointer, option: pointer): void{.importc: "QDateTimeEdit_virtualbase_initStyleOption".}
proc fcQDateTimeEdit_override_virtual_initStyleOption(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_initStyleOption".}
proc fQDateTimeEdit_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QDateTimeEdit_virtualbase_minimumSizeHint".}
proc fcQDateTimeEdit_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_minimumSizeHint".}
proc fQDateTimeEdit_virtualbase_inputMethodQuery(self: pointer, param1: cint): pointer{.importc: "QDateTimeEdit_virtualbase_inputMethodQuery".}
proc fcQDateTimeEdit_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_inputMethodQuery".}
proc fQDateTimeEdit_virtualbase_resizeEvent(self: pointer, event: pointer): void{.importc: "QDateTimeEdit_virtualbase_resizeEvent".}
proc fcQDateTimeEdit_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_resizeEvent".}
proc fQDateTimeEdit_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QDateTimeEdit_virtualbase_keyReleaseEvent".}
proc fcQDateTimeEdit_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_keyReleaseEvent".}
proc fQDateTimeEdit_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QDateTimeEdit_virtualbase_focusOutEvent".}
proc fcQDateTimeEdit_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_focusOutEvent".}
proc fQDateTimeEdit_virtualbase_contextMenuEvent(self: pointer, event: pointer): void{.importc: "QDateTimeEdit_virtualbase_contextMenuEvent".}
proc fcQDateTimeEdit_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_contextMenuEvent".}
proc fQDateTimeEdit_virtualbase_changeEvent(self: pointer, event: pointer): void{.importc: "QDateTimeEdit_virtualbase_changeEvent".}
proc fcQDateTimeEdit_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_changeEvent".}
proc fQDateTimeEdit_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QDateTimeEdit_virtualbase_closeEvent".}
proc fcQDateTimeEdit_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_closeEvent".}
proc fQDateTimeEdit_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QDateTimeEdit_virtualbase_hideEvent".}
proc fcQDateTimeEdit_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_hideEvent".}
proc fQDateTimeEdit_virtualbase_mouseReleaseEvent(self: pointer, event: pointer): void{.importc: "QDateTimeEdit_virtualbase_mouseReleaseEvent".}
proc fcQDateTimeEdit_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_mouseReleaseEvent".}
proc fQDateTimeEdit_virtualbase_mouseMoveEvent(self: pointer, event: pointer): void{.importc: "QDateTimeEdit_virtualbase_mouseMoveEvent".}
proc fcQDateTimeEdit_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_mouseMoveEvent".}
proc fQDateTimeEdit_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QDateTimeEdit_virtualbase_timerEvent".}
proc fcQDateTimeEdit_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_timerEvent".}
proc fQDateTimeEdit_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QDateTimeEdit_virtualbase_showEvent".}
proc fcQDateTimeEdit_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_showEvent".}
proc fQDateTimeEdit_virtualbase_devType(self: pointer, ): cint{.importc: "QDateTimeEdit_virtualbase_devType".}
proc fcQDateTimeEdit_override_virtual_devType(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_devType".}
proc fQDateTimeEdit_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QDateTimeEdit_virtualbase_setVisible".}
proc fcQDateTimeEdit_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_setVisible".}
proc fQDateTimeEdit_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QDateTimeEdit_virtualbase_heightForWidth".}
proc fcQDateTimeEdit_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_heightForWidth".}
proc fQDateTimeEdit_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QDateTimeEdit_virtualbase_hasHeightForWidth".}
proc fcQDateTimeEdit_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_hasHeightForWidth".}
proc fQDateTimeEdit_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QDateTimeEdit_virtualbase_paintEngine".}
proc fcQDateTimeEdit_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_paintEngine".}
proc fQDateTimeEdit_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QDateTimeEdit_virtualbase_mouseDoubleClickEvent".}
proc fcQDateTimeEdit_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_mouseDoubleClickEvent".}
proc fQDateTimeEdit_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QDateTimeEdit_virtualbase_enterEvent".}
proc fcQDateTimeEdit_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_enterEvent".}
proc fQDateTimeEdit_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QDateTimeEdit_virtualbase_leaveEvent".}
proc fcQDateTimeEdit_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_leaveEvent".}
proc fQDateTimeEdit_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QDateTimeEdit_virtualbase_moveEvent".}
proc fcQDateTimeEdit_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_moveEvent".}
proc fQDateTimeEdit_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QDateTimeEdit_virtualbase_tabletEvent".}
proc fcQDateTimeEdit_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_tabletEvent".}
proc fQDateTimeEdit_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QDateTimeEdit_virtualbase_actionEvent".}
proc fcQDateTimeEdit_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_actionEvent".}
proc fQDateTimeEdit_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QDateTimeEdit_virtualbase_dragEnterEvent".}
proc fcQDateTimeEdit_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_dragEnterEvent".}
proc fQDateTimeEdit_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QDateTimeEdit_virtualbase_dragMoveEvent".}
proc fcQDateTimeEdit_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_dragMoveEvent".}
proc fQDateTimeEdit_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QDateTimeEdit_virtualbase_dragLeaveEvent".}
proc fcQDateTimeEdit_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_dragLeaveEvent".}
proc fQDateTimeEdit_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QDateTimeEdit_virtualbase_dropEvent".}
proc fcQDateTimeEdit_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_dropEvent".}
proc fQDateTimeEdit_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr uint): bool{.importc: "QDateTimeEdit_virtualbase_nativeEvent".}
proc fcQDateTimeEdit_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_nativeEvent".}
proc fQDateTimeEdit_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QDateTimeEdit_virtualbase_metric".}
proc fcQDateTimeEdit_override_virtual_metric(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_metric".}
proc fQDateTimeEdit_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QDateTimeEdit_virtualbase_initPainter".}
proc fcQDateTimeEdit_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_initPainter".}
proc fQDateTimeEdit_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QDateTimeEdit_virtualbase_redirected".}
proc fcQDateTimeEdit_override_virtual_redirected(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_redirected".}
proc fQDateTimeEdit_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QDateTimeEdit_virtualbase_sharedPainter".}
proc fcQDateTimeEdit_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_sharedPainter".}
proc fQDateTimeEdit_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QDateTimeEdit_virtualbase_inputMethodEvent".}
proc fcQDateTimeEdit_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_inputMethodEvent".}
proc fQDateTimeEdit_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QDateTimeEdit_virtualbase_eventFilter".}
proc fcQDateTimeEdit_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_eventFilter".}
proc fQDateTimeEdit_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QDateTimeEdit_virtualbase_childEvent".}
proc fcQDateTimeEdit_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_childEvent".}
proc fQDateTimeEdit_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QDateTimeEdit_virtualbase_customEvent".}
proc fcQDateTimeEdit_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_customEvent".}
proc fQDateTimeEdit_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QDateTimeEdit_virtualbase_connectNotify".}
proc fcQDateTimeEdit_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_connectNotify".}
proc fQDateTimeEdit_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QDateTimeEdit_virtualbase_disconnectNotify".}
proc fcQDateTimeEdit_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QDateTimeEdit_override_virtual_disconnectNotify".}
proc fcQDateTimeEdit_staticMetaObject(): pointer {.importc: "QDateTimeEdit_staticMetaObject".}
proc fcQDateTimeEdit_delete(self: pointer) {.importc: "QDateTimeEdit_delete".}
proc fcQTimeEdit_new(parent: pointer): ptr cQTimeEdit {.importc: "QTimeEdit_new".}
proc fcQTimeEdit_new2(): ptr cQTimeEdit {.importc: "QTimeEdit_new2".}
proc fcQTimeEdit_new3(time: pointer): ptr cQTimeEdit {.importc: "QTimeEdit_new3".}
proc fcQTimeEdit_new4(time: pointer, parent: pointer): ptr cQTimeEdit {.importc: "QTimeEdit_new4".}
proc fcQTimeEdit_metaObject(self: pointer, ): pointer {.importc: "QTimeEdit_metaObject".}
